cmake_minimum_required(VERSION 3.20)
project(ChiralityRender VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
add_definitions(-D_DEBUG)
#add_subdirectory(thirdparty/assimp)
set(assimp_include thirdparty/assimp/include)
set(glm_include glm)
set(my_include inc)
include_directories(${PROJECT_SOURCE_DIR} ${assimp_include} ${glm_include} ${my_include})
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
set(executable_name "${PROJECT_NAME}_Debug")

if(CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
    message(STATUS "Building for windows")
    add_definitions(-DWIN32)
    file(COPY Shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    file(COPY Resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    include_directories(${PROJECT_SOURCE_DIR}/OpenGL/include)
    link_directories(${PROJECT_SOURCE_DIR}/OpenGL/Libs)
    link_libraries(opengl32.lib glew32s.lib glfw3.lib)
    link_directories(${PROJECT_SOURCE_DIR}/thirdparty/assimp/build/lib/Debug)
    link_directories(${PROJECT_SOURCE_DIR}/thirdparty/assimp/build/contrib/zlib/Debug)
    link_libraries(assimp-vc142-mtd.lib)
    link_libraries(zlibstaticd.lib)
    add_executable(${executable_name} ChiralityDemo.cpp ${SRC_LIST})
    
elseif(CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "Building for linux")
    file(COPY Shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../)
    file(COPY Resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../)
    add_definitions(-DLINUX)
    link_libraries(GL GLEW glfw)
    link_directories(thirdparty/assimp/build/bin)
    link_libraries(assimp)
    add_executable(${executable_name} ChiralityDemo.cpp ${SRC_LIST})
endif()